<resources>
    <string name="app_name">InventoryApp</string>
    <string name="overView">Over-view</string>
    <string name="productName">Product_name</string>
    <string name="price">Price</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantityText">1</string>
    <string name="quantity">Quantity</string>
    <string name="memberShip">MemberShip</string>
    <string name="yes">yes</string>
    <string name="upLoad">up load</string>
    <string name="no">no</string>
    <string name="editor_insert_Product_successful">Product saved</string>
    <string name="editor_insert_Product_failed">Error with saving product</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="order">Order</string>
    <string name="product">Product</string>
    <string name="sell">sell</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="emptyText">No data in the database right now. Please click on add button to get started. </string>
</resources>
