<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.Details">
    <ImageView
        android:layout_gravity="center"
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"/>
    <Button
        android:id="@+id/upLoad_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upLoad"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/overView"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/edit_product_name"
                android:hint="@string/productName"
                android:inputType="textCapWords" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/edit_product_price"
                android:hint="@string/price"
                android:inputType="textCapWords"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/minus_Button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"/>
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantityText"/>
            <Button
                android:id="@+id/plus_Button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/memberShip"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <RadioButton
                android:id="@+id/yes_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>
            <RadioButton
                android:id="@+id/no_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/order"
        android:id="@+id/order_button" />
</LinearLayout>
