<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/product_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:layout_margin="8dp"/>
        <TextView
            android:id="@+id/name_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_margin="8dp"
            android:layout_below="@id/product_textView" />
        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_margin="8dp"
            android:layout_toRightOf="@id/name_quantity"
            android:layout_below="@id/product_textView"/>
        <TextView
            android:id="@+id/price_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="4dp"
            android:gravity="center"/>
        <Button
            android:id="@+id/sell_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_textView"
            android:layout_alignParentRight="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/sell"/>
    </RelativeLayout>
</LinearLayout>